examples/test/testpolicy13173.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13173
  namespace: namespace266
spec:
  podSelector:
    matchLabels:
      key36: value15
      key8: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value2
          key5: value18
      podSelector:
        matchLabels:
          key0: value30
